@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3327 2019/08/09 15:46:29 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3328 2019/08/09 15:48:20 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5451,3 +5451,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added math/R-energy version 1.7.6 [brook 2019-08-09]
 	Added math/R-DEoptimR version 1.0.8 [brook 2019-08-09]
 	Added math/R-tensorA version 0.36.1 [brook 2019-08-09]
+	Added math/R-robustbase version 0.93.5 [brook 2019-08-09]
